Additional features with templates